--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Este es un sitio web con Github Pages</h1>
-<p>Y fue creado con amor para el Curso de Git y Github de Platzi</p>
+<h1>Me pueden mamar el webo tu y bazuca</h1>
+<p>Y emili seguro se le olvido colocar el tbt no seas mal pensado tonto</p>
 <p><img src="https://i.imgur.com/PfA0M2o.gif" /></p>
