--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             float: center;
         }
         body{
-            background-image: url("city.jpg");
+            background-image: url("https://imgur.com/a/mamQCVW");
             background-blend-mode: lighten;
             background-repeat: no-repeat;
             background-size: cover;
