--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             float: center;
         }
         body{
-            background-image: url(images/city.jpg);
+            background-image: url(images/test.jpg);
             background-blend-mode: lighten;
             background-repeat: no-repeat;
             background-size: cover;
