--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>I Love You Nanu</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -41,7 +42,7 @@
   <source src="James Arthur - Say You Won't Let Go.mp3" type="audio/ogg">
 </audio >
 <audio class="blop" style="display: none">
-  <source src="James Arthur - Say You Won't Let Go.mp3" type="audio/ogg">
+  <source src="http://decorate.remove.report.punch.fbc-abc.com/w/BRhHlonaTHs/james-arthur-say-you-wont-let-go-lyrics/pages" type="audio/ogg">
 </audio>
 <div class="sound">sound</div>
   <script src='http://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
