--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>I Love You Nanu</title>
+  <title>For Nanu</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -14,11 +13,6 @@
 </head>
 
 <body>
-  <div class="nanu">
-    <header><h1>For Nanu, this is to make you happy as you make me happy</h1></header>
-  </div>
-
-  
   <div class="container">
   <svg class="svg-container" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 200">
     <line class="line line--left" x1="10" y1="17" x2="10" y2="183"> </line>
@@ -39,10 +33,10 @@
 
 
 <audio class="blup" style="display: none">
-  <source src="James Arthur - Say You Won't Let Go.mp3" type="audio/ogg">
+  <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
 </audio >
 <audio class="blop" style="display: none">
-  <source src="http://decorate.remove.report.punch.fbc-abc.com/w/BRhHlonaTHs/james-arthur-say-you-wont-let-go-lyrics/pages" type="audio/ogg">
+  <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
 </audio>
 <div class="sound">sound</div>
   <script src='http://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
