--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="nanu">
-    <header><h1>For Nanu, this is to make you happy as you make me happy</h1></header>
+    <header><h1>For Nanu</h1></header>
   </div>
 
   
