--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="contenedor">
-        <h1 class="titulo">For nanu, this is to make you happy as you make me happy</h1>
+        <h1 class="titulo">For babe, I hope this makes you as happy as you make me</h1>
     </div>
     <div class="imagen">
         <img src="https://static.vecteezy.com/system/resources/previews/005/453/147/original/cute-penguin-couple-with-heart-vector.jpg" alt="https://static.vecteezy.com/system/resources/previews/005/453/147/original/cute-penguin-couple-with-heart-vector.jpg">
