--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rania's Song</title>
+    <title>Babe > Messi > Taylor</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,8 +22,8 @@
 
     <div class="audio">
     <audio controls autoplay>
-        <source src="James Arthur - Say You Won't Let Go (Lyrics).mp3" type="audio/ogg">
-        <source src="James Arthur - Say You Won't Let Go (Lyrics).mp3" type="audio/mpeg">
+        <source src="Taylor Swift - Love Story.mp3" type="audio/ogg">
+        <source src="Taylor Swift - Love Story.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
