--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 
 <audio class="blup" style="display: none">
-  <source src="James Arthur - Say You Won't Let Go.mp3" type="audio/ogg">
+  <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
 </audio >
 <audio class="blop" style="display: none">
-  <source src="https://www.youtube.com/watch?v=0yW7w8F2TVA" type="audio/ogg">
+  <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
 </audio>
 <div class="sound">sound</div>
   <script src='http://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
