--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>Nanu</title>
+  <title>For my babe-e</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -15,7 +15,7 @@
 
 <body>
   <div class="nanu">
-    <header><h1>For Nanu, I hope this make you smile :)</h1></header>
+    <header><h1>For my babe-e, I hope this brings a smile to your face :)</h1></header>
   </div>
 
   
@@ -45,8 +45,7 @@
   <source src="https://www.freesound.org/data/previews/265/265115_4373976-lq.mp3" type="audio/ogg">
 </audio>
 <div class="sound">sound</div>
-  <script src='http://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
-
+  <script src='https://cdn.jsdelivr.net/mojs/latest/mo.min.js'></script>
     <script src="js/index.js"></script>
 
 </body>
