--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.c26b1782.js"></script><link href="/static/css/main.ff02f4b5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rania's Song</title>
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@100&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    <div class="contenedor">
+        <h1 class="titulo">For nanu, this is to make you happy as you make me happy</h1>
+    </div>
+    <div class="imagen">
+        <img src="https://static.vecteezy.com/system/resources/previews/005/453/147/original/cute-penguin-couple-with-heart-vector.jpg" alt="https://static.vecteezy.com/system/resources/previews/005/453/147/original/cute-penguin-couple-with-heart-vector.jpg">
+    </div>
+
+    <div class="audio">
+    <audio controls autoplay>
+        <source src="James Arthur - Say You Won't Let Go (Lyrics).mp3" type="audio/ogg">
+        <source src="James Arthur - Say You Won't Let Go (Lyrics).mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+    </div>
+    <!-- <div class="caja1"></div>
+    <div class="caja2"></div>
+    <div class="caja3"></div>
+    <div class="caja4"></div> -->
+
+    <!-- <div class="caja1">
+        Div de prueba
+    </div> -->
+</body>
+</html>
